--- a/index.html
+++ b/index.html
@@ -9,16 +9,39 @@
             position: absolute;
             left: 50%;
         }
+
+        #outputbox p {
+            left: 50px;
+            position: absolute;
+        }
     </style>
     <body style="margin: 0px;">
-        <button type="button" class="center" onclick="findWords()" style="top: 10%; width: 100px; height: 50px;">Find Words</button>
-        <div class="center" style="top: 20%">
-            <p style="position: absolute; width: 1000px; font-size: 60px; transform: translate(-15%, -110%);">(---)- --  -</p>
-            <input id="box1" maxlength="3" type="text" style="width: 50px; height: 25px; text-align: center; position: absolute; transform: translateX(50%); right: 100px">
-            <input id="box2" maxlength="3" type="text" style="width: 50px; height: 25px; text-align: center; position: absolute; transform: translateX(-50%);">
-            <input id="box3" maxlength="4" type="text" style="width: 75px; height: 25px; text-align: center; position: absolute; transform: translateX(-50%); left: 100px">
+        <div style="width: 100%; height: 10%; background-color: darkcyan; position: absolute; box-shadow: 0px 2px 5px 0px; z-index: 10; background-image: url(banner.jpg);">
+            <h1 style="color: white; font-size: 30px; transform: translate(0%, -50%); left:2%; position: absolute; top: 25%;">Find Words From Phone Number</h1>
         </div>
-        <textarea id="texthere" class="center" style="width: 500px; height: 600px; top: 60%;"></textarea>
+        <div style="width: 30%; height: 100%; position: absolute; background-color: rgb(240, 240, 240);">
+            <h2 class="center" id="warning" style="top: 15%; width: 300px; left: 53%; color: black;">Input Phone Number:</h2>
+            <div class="center" style="top: 21%">
+                <p style="position: absolute; width: 1000px; font-size: 60px; transform: translate(-15%, -110%);">(---)- --  -</p>
+                <input id="box1" maxlength="3" type="text" style="width: 50px; height: 25px; text-align: center; position: absolute; transform: translateX(50%); right: 100px; font-size: 20px;" oninput="validate(this, 1)">
+                <input id="box2" maxlength="3" type="text" style="width: 50px; height: 25px; text-align: center; position: absolute; transform: translateX(-50%); font-size: 20px;" oninput="validate(this, 1)">
+                <input id="box3" maxlength="4" type="text" style="width: 75px; height: 25px; text-align: center; position: absolute; transform: translateX(-50%); left: 100px; font-size: 20px;" oninput="validate(this, 1)">
+            </div>
+            <h2 class="center" style="top: 35%; width: 300px; left: 50%; transform: translate(-30%, -50%);">Choose Filters:</h2>
+            <div class="center" style="top: 45%;">
+                <p class="center" style="width: 150px; transform: translate(-45%, -200%);">Min Word Length</p>
+                <input type="number" id="minlen" min="1" max="10" class="center" style="width: 40px; top: 15px;" oninput="validate(this, 1, 10, 1)" value="1">
+            </div>
+            <div class="center" style="top: 55%;">
+                <p class="center" style="width: 150px; transform: translate(-45%, -200%);">Max Word Length</p>
+                <input type="number" id="maxlen" min="1" max="10" class="center" style="width: 40px; top: 15px;" oninput="validate(this, 1, 10, 1)" value="10">
+            </div>
+            <button type="button" id="startbutton" class="center" onclick="findWords()" style="top: 90%; width: 80%; height: 50px; background-color: #75b5f1; font-size: 20px;">Find Words</button>
+        </div>
+        <h2 style="position: absolute; top: 12%; right: 30%; font-size: 30px;">Possible Words:</h2>
+        <div id="outputbox" style="background-color: white; width: 65%; height: 80%; position: absolute; top: 20%; right: 0%;">
+
+        </div>
 
         <script src="words.js" defer> </script>
         <script src="index.js" defer> </script>
