--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <title>Word From Phone</title>
+        <link rel="icon" type="image/x-icon" href="icon.ico">
     </head>
     <style>
         .center {
